--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jiepengwong/telegrampricebot#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "telegraf": "^4.5.2"
   }
 }
